dynamic rendering logic added

--- a/src/index.css
+++ b/src/index.css
@@ -306,3 +306,44 @@ a {
 .navActive {
   color: var(--secondary);
 }
+
+.edit_hover_class a{
+  visibility:hidden;
+}
+.edit_hover_class:hover a {
+ visibility:visible;
+}
+
+.navbar {
+  width:100%;
+  height: 70px;
+  /* position: fixed;
+  top:0;
+  z-index: 2; */
+}
+
+.wrapper {
+  padding: 10px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-wrapper {
+  padding: 10px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.logo-container {
+  
+  display:flex;
+  padding:0;
+  /* max-width: 33%; */
+}
+
+.right {
+  max-width:60%;
+}
