--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.sections {
+  height: calc(100vh - 70px);
+  position: relative;
+  top: 70px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
