--- a/src/index.css
+++ b/src/index.css
@@ -347,3 +347,37 @@ a {
 .right {
   max-width:60%;
 }
+
+/* contact-icons */
+.contact-icons {
+  display: flex;
+  justify-content: center;
+  margin: 20px auto;
+}
+
+.contact-icons a {
+  margin: 5px;
+  display: flex;
+  min-width: 80px;
+  flex-direction: column;
+  color: var(--light);
+  text-decoration: none;
+}
+
+.contact-icons a i {
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-icons a span {
+  text-align: center;
+}
+
+.contact-icons a:hover {
+  border-radius: 15px;
+  background-size: 85% 2px;
+  border-radius: 25%;
+}
