--- a/src/index.css
+++ b/src/index.css
@@ -147,9 +147,7 @@ span[role="img"] {
   cursor: default;
 }
 
-form {
-  width: 40%;
-}
+
 
 label{
   display: block;
@@ -162,10 +160,6 @@ input {
   outline: none;
   border-radius: 3px;
   transition: box-shadow 0.2s;
-}
-
-input:required{
-  outline: 2px solid #B12704;
 }
 
 input[type="email"]:valid {
@@ -205,10 +199,10 @@ nav li {
 }
 
 textarea {
-	width: 600px;
-	height: 120px;
-	border: 3px solid #cccccc;
+	max-width: 100%;
+	border: 1px solid var(--dark);
 	padding: 5px;
+  display: block;
 }
 
 .container {
@@ -318,14 +312,13 @@ textarea {
 }
 
 button {
-	background: var(--primary);
 	border: 0;
 	border-radius: 5px;
 	color: #fff;
 	cursor: pointer;
 	font-size: 16px;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-top: 1rem;
 	padding: 10px 15px;	
 }
 
@@ -442,7 +435,12 @@ a {
   display: inline-block;
 }
 
-@media screen and (max-width:420px) {
+@media screen and (max-width:611px) {
+
+  body {
+    line-height: 1.3; 
+  }
+  
   .flex-row .project-box {
     width: 100%;
   }
@@ -462,7 +460,7 @@ a {
   }
 
   .navbar .flex-row li {
-    font-size: 0.75rem;
+    font-size: 0.75em;
     margin: 0 var(--spacing-one) var(--spacing-one);
   }
   nav {
@@ -471,5 +469,13 @@ a {
   nav li a {
     padding: 0px;
     text-align: center;
+  }
+}
+
+@media screen and (min-width:612px) and (max-width:770px) {
+  .navbar .left {
+    display: inline-block;
+    min-width: 50%;
+    /* text-align: center; */
   }
 }
