--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-main {
-	margin: 0 auto;
-	max-width: 90%;
-  padding: 50px 30px;
-}
-
 :root {
   --primary: #8c54ff;
   --secondary: #F3A847;
@@ -33,18 +18,12 @@ main {
 
 }
 
-* {
-  box-sizing: border-box;
-}
-
-html,
 body {
-  min-height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-weight: 600;
   line-height: 1.5;
   font-size: 18px;
@@ -52,8 +31,7 @@ body {
   background: var(--light);
   /* background-image: linear-gradient(to bottom, #cfdeee 0%, #8da9cf 100%); */
   color: var(--text);
-  font-family: 'Georgia Pro',Georgia, 'Times New Roman', Times, serif;
-
+  /* font-family: 'Georgia Pro',Georgia, 'Times New Roman', Times, serif; */
 }
 
 h1,
@@ -70,13 +48,17 @@ h6 {
 
 h1 {
   font-size: 2.25rem;
-  border-bottom: 2px solid var(--secondary);
   display: inline-block;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 1.75rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  /* background: linear-gradient(to right, var(--secondary),var(--light));
+  color: var(--light);
+  padding-left: 5px; */
+
 }
 
 h3 {
@@ -106,18 +88,77 @@ a {
   font-weight: bold;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+main {
+	margin: 0 auto;
+  padding: 20px 60px;
+}
+
 /* a:hover {
   text-decoration: underline;
 } */
 
 header {
   background: var(--dark);
+  padding: 10px 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position:-webkit-sticky;
+  position: sticky;
+  top:0;
+  width:100%;
+  /* height: auto; */
+  z-index: 9999; 
+}
+
+header h1 {
+  text-decoration: none;
 }
 
 header a {
   color: var(--light);
+  text-decoration: none;
 }
 
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items:center;
+  list-style: none;
+}
+
+.about-me {
+  /* margin: 50px auto; */
+  
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
+.about-me h2 {
+  flex: 1 100%;
+}
+
+.about-img {
+  flex: 0 32%;
+  margin-right:0;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.about-info p {
+  line-height: 1.7;
+  font-size: 1em;
+  margin-bottom: 1.5rem;
+
+}
 button {
   font-size: 1rem;
   text-decoration: none;
@@ -343,18 +384,6 @@ a {
  visibility:visible;
 }
 
-.navbar {
-  padding: 10px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width:100%;
-  height: auto;
-  position: fixed;
-  /* top:0;*/
-  z-index: 2; 
-}
-
 .footer-wrapper {
   padding: 10px 30px;
   display: flex;
@@ -434,9 +463,45 @@ a {
 .img-thumbnail:hover +.project-tag {
   display: inline-block;
 }
+@media screen and (max-width:980px) {
+  header {
+    justify-content: center;
+    padding-bottom: 0;
+    padding:0;
+  }
 
-@media screen and (max-width:611px) {
+  header h1 {
+    width:100%;
+    text-align: center;
+  }
 
+  header nav ul {
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width:768px){
+  header nav ul li a {
+    font-size: 16px;
+  }
+
+  main {
+    padding:0px 20px;
+  }
+};
+  
+
+@media screen and (max-width:575px) {
+  
+  header {
+    padding:0;
+  }
+  
   body {
     line-height: 1.3; 
   }
@@ -445,37 +510,9 @@ a {
     width: 100%;
   }
   
-  .navbar {
-    flex-wrap: wrap;
-    padding:0;
-    justify-content: center;
-    padding-top: var(--spacing-one);
-    
-  }
-
-  .navbar .left {
-    display: block;
-    min-width: 100%;
-    text-align: center;
-  }
-
-  .navbar .flex-row li {
-    font-size: 0.75em;
-    margin: 0 var(--spacing-one) var(--spacing-one);
-  }
-  nav {
-    width:100%;
-  }
   nav li a {
     padding: 0px;
     text-align: center;
   }
-}
-
-@media screen and (min-width:612px) and (max-width:770px) {
-  .navbar .left {
-    display: inline-block;
-    min-width: 50%;
-    /* text-align: center; */
-  }
+  
 }
