--- a/src/index.css
+++ b/src/index.css
@@ -65,18 +65,6 @@ h3 {
   font-size: 1.75rem;
 }
 
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
-}
-
 p {
   font-size: 1.1rem;
   margin-top: 0;
@@ -187,8 +175,6 @@ img {
 span[role="img"] {
   cursor: default;
 }
-
-
 
 label{
   display: block;
@@ -493,26 +479,39 @@ a {
   main {
     padding:0px 20px;
   }
-};
+}
   
-
 @media screen and (max-width:575px) {
   
   header {
     padding:0;
   }
   
-  body {
+  /* body {
     line-height: 1.3; 
-  }
+  } */
   
   .flex-row .project-box {
     width: 100%;
   }
   
+  nav {
+    width:100%;
+  }
   nav li a {
     padding: 0px;
     text-align: center;
+    
   }
-  
-}
+
+  #contact-form input[type="text"], 
+  #contact-form input[type="email"],
+  #contact-form textarea,
+  #contact-form button {
+    width: 100%;
+  }
+
+  nav ul li{
+    width: 25%; 
+  }
+} 
